# oppen

./: .gitignore  Dockerfile.agent  Dockerfile.training-llm  Dockerfile.training-mnist  Dockerfile.training-mnist-ddp  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/core/: agent.py  memory.py  tools.py
app/interfaces/: http.py  mcp.py
docs/: PHASE6_COMPLETE.md  PHASE6_SESSION_SUMMARY.md  PHASE6_STATUS.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  README.md  int.docs.md  phase1.docs.md  phase10_end_to_end_mlops.md  phase1_foundations.md  phase2.docs.md  phase2_mcp_bridge.md  phase3.docs.md  phase3_chaos_detection.md  phase4.docs.md  phase4_autonomous_healing.md  phase4a.docs.md  phase4b.docs.md  phase4c.docs.md  phase4d.docs.md  phase5_completion_summary.md  phase5_implementation.md  phase5_model_training.md  phase6_model_registry.md  phase6_planning.md  phase6_tier1_complete.md  phase6_tier2_complete.md  phase7_automl_guide.md  phase7_gpu_scheduling_cost_optimization.md  phase8_distributed_guide.md  phase8_ml_observability.md  phase9_inference_optimization.md  phase9_kubeflow_guide.md  project.md  review_report.md  roadmap.md
mlops-tutorial/: docusaurus.config.ts  package-lock.json  package.json
phase1-learning/: 04-lab3-app.md  06-quiz.md  README.md  troubleshooting.md
scripts/: chaos_monkey.py  mcp_terraform.py  phase1_agent.py  test_mcp.py  test_terraform_mcp.py
terraform/: cost_config.tf  gpu_support.tf  main.tf  mlflow.tf  phase6_monitoring.tf  phase6_scheduling.tf  podinfo.tf  variables.tf
(+18 files in other folders)
