[project]
name = "oppen"
version = "0.1.0"
description = "Open Platform for Autonomous Cloud Operations"
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "ollama>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
    "chromadb>=0.4.0",
    "typer>=0.9.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.34.0",
    "datasets>=2.14.0",
    "mlflow>=2.9.0",
    "psycopg2-binary>=2.9.0",
    "accelerate>=0.24.0",
    "optuna>=3.5.0",
    "optuna-integration[mlflow]>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
